package com.ashchuk.bakingapp.ui.activities;

import android.content.res.Resources;
import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.ashchuk.bakingapp.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class NavigateToRecipeDetailsActivityTest {

    private int delay = 1000;

    @Rule
    public ActivityTestRule<RecipesActivity> mActivityTestRule = new ActivityTestRule<>(RecipesActivity.class);

    @Test
    public void navigateToRecipeDetailsActivityTest() {
        try {
            Thread.sleep(delay);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction recyclerView = onView(
                allOf(withId(R.id.recipes_rv),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)));
        recyclerView.perform(actionOnItemAtPosition(0, click()));

        if (isTablet()) {
            ViewInteraction recyclerView2 = onView(
                    allOf(withId(R.id.recipe_list),
                            childAtPosition(
                                    withClassName(is("android.widget.LinearLayout")),
                                    1)));
            recyclerView2.perform(actionOnItemAtPosition(0, click()));

            try {
                Thread.sleep(delay);
            } catch (InterruptedException e) {
                e.printStackTrace();
            }

            ViewInteraction textView = onView(
                    allOf(withText("Step details"),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.recipe_layout),
                                            0),
                                    1),
                            isDisplayed()));
            textView.check(matches(withText("Step details")));
        } else {
            ViewInteraction recyclerView2 = onView(
                    allOf(withId(R.id.recipe_list),
                            childAtPosition(
                                    withId(R.id.recipe_detail_ll),
                                    1)));
            recyclerView2.perform(actionOnItemAtPosition(0, click()));

            try {
                Thread.sleep(delay);
            } catch (InterruptedException e) {
                e.printStackTrace();
            }

            ViewInteraction textView = onView(
                    allOf(withText("Step details"),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.recipe_layout),
                                            0),
                                    1),
                            isDisplayed()));
            textView.check(matches(withText("Step details")));
        }
    }

    private boolean isTablet() {
        Resources resources = getInstrumentation().getTargetContext().getResources();
        return resources.getBoolean(R.bool.isTablet);
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
